[gd_scene load_steps=2 format=3 uid="uid://yj1su8s2rnac"]

[ext_resource type="Script" uid="uid://d16aujfx8c5qg" path="res://Scripts/pages/Partida.gd" id="1_ga1sq"]

[node name="Partida" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ga1sq")

[node name="test" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.990451
anchor_bottom = 0.654321
offset_bottom = -3.05176e-05
horizontal_alignment = 3
autowrap_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Pause" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.834201
anchor_top = 0.0154321
anchor_right = 0.993056
anchor_bottom = 0.125
theme_override_font_sizes/font_size = 36
text = "Pause"
metadata/_edit_use_anchors_ = true

[node name="Pontuação" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.613715
anchor_top = 0.0200617
anchor_right = 0.799479
anchor_bottom = 0.066358
text = "Pontuação: N/A"
metadata/_edit_use_anchors_ = true

[node name="nRodadaAtual" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.613715
anchor_top = 0.0601852
anchor_right = 0.723959
anchor_bottom = 0.103395
grow_vertical = 2
text = "Rodada Atual: "
metadata/_edit_use_anchors_ = true

[node name="MenuFimPartida" type="Panel" parent="."]
visible = false
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.219618
anchor_top = 0.152778
anchor_right = 0.729167
anchor_bottom = 0.75463
metadata/_edit_use_anchors_ = true

[node name="Resultado" type="Label" parent="MenuFimPartida"]
layout_mode = 0
anchor_left = 0.0425896
anchor_top = 0.215384
anchor_right = 0.976149
anchor_bottom = 0.361538
theme_override_font_sizes/font_size = 41
text = "<RESULTADO_DA_PARTIDA>"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VContainer" type="VBoxContainer" parent="MenuFimPartida"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.148211
anchor_top = 0.394871
anchor_right = 0.851788
anchor_bottom = 0.948717
offset_right = 3.05176e-05
theme_override_constants/separation = 19
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="PontuaçãoFinal" type="Label" parent="MenuFimPartida/VContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "<Pontuação Final>"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MelhorPontuação" type="Label" parent="MenuFimPartida/VContainer"]
layout_mode = 2
text = "Sem pontuações anteriores"
horizontal_alignment = 1

[node name="Resetar Partida" type="Button" parent="MenuFimPartida/VContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
disabled = true
text = "Nova Partida"

[node name="Voltar para o Menu Principal" type="Button" parent="MenuFimPartida/VContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
disabled = true
text = "Sair para o Menu Principal"

[node name="MenuPausa" type="Panel" parent="."]
visible = false
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.219618
anchor_top = 0.152778
anchor_right = 0.729167
anchor_bottom = 0.75463
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="MenuPausa"]
layout_mode = 2
anchor_left = 0.153322
anchor_top = 0.151282
anchor_right = 0.856899
anchor_bottom = 0.297436
theme_override_font_sizes/font_size = 41
text = "Jogo Pausado..."
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="VContainer" type="VBoxContainer" parent="MenuPausa"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.155026
anchor_top = 0.425641
anchor_right = 0.858603
anchor_bottom = 0.853846
theme_override_constants/separation = 7
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="Resume" type="Button" parent="MenuPausa/VContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "voltar à Partida"

[node name="Reset" type="Button" parent="MenuPausa/VContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resetar Partida"

[node name="Voltar para o Menu Principal" type="Button" parent="MenuPausa/VContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Voltar para o Menu Principal"

[node name="SeeAlb" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.830729
anchor_top = 0.694444
anchor_right = 0.99566
anchor_bottom = 0.820988
theme_override_font_sizes/font_size = 36
text = "Ver Album"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="MenuFimPartida/VContainer/Resetar Partida" to="." method="_on_resetar_partida_pressed"]
[connection signal="pressed" from="MenuFimPartida/VContainer/Voltar para o Menu Principal" to="." method="_on_voltar_para_o_menu_principal_pressed"]
[connection signal="pressed" from="MenuPausa/VContainer/Resume" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="MenuPausa/VContainer/Reset" to="." method="_on_resetar_partida_pressed"]
[connection signal="pressed" from="MenuPausa/VContainer/Voltar para o Menu Principal" to="." method="_on_voltar_para_o_menu_principal_pressed"]
[connection signal="pressed" from="SeeAlb" to="." method="_on_see_alb_pressed"]
